--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:postgresql://localhost:5432/test3
+spring.datasource.url=jdbc:postgresql://localhost:5432/sjaak
 spring.datasource.username=postgres
-spring.datasource.password=LunaLuna123
+spring.datasource.password=nick
 spring.jpa.generate-ddl=true
